# electron-python-template

./: .gitignore  README.md  conftest.py  electron-builder.yml  package-lock.json  package.json  pyproject.toml
docs/postman/: app.postman_collection.json
scripts/: build.sh  start.sh
src/database/: __init__.py  database.py
src/electron/: main.js  preload.js  renderer.js
src/jobs/: README.md  sample_job.py
src/jobs/utils/: job_utils.py
src/main/: api.py  calculator.py
src/static/: index.html  styles.css
tests/api/: test_api.py
tests/database/: conftest.py  test_database.py
