[tool.poetry]
name = "my-electron-app-template"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
apscheduler = "^3.10.4"
websockets = "^12.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.11.0"
flake8 = "^6.1.0"
pyinstaller = "^6.2.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]